2015-08-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/pdftoepdf.w: Drop useless casts to avoid warnings.
	* lua/lpdfscannerlib.cc: Unconstify Token.string to avoid warning.
	* lua/lepdflib.cc: Drop useless casts to avoid some warnings.

2015-08-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/mlist.w: Sync with the trunk.
	See http://tug.org/pipermail/luatex/2015-August/005319.html
	* tex/printing.w: Do not write to a log file for the
	--[no-]parse-first-line option, since the option actually does not
	exist in lua(jit)tex, although superficially it remains for compatibility
	with existing scripts etc.

2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/luatex.am: Dependencies for 'make check'.

2015-07-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/lkpselib.c: Also used for MFLua and MFLuaJIT.

2015-03-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luazip/src/luazip.c (zip_close): Sync with the upstream.

2015-03-19 Luigi Scarso <luigi.scarso@gmail.com>

	New library newtokenlib; several bugs fixed.

2015-01-14 Luigi Scarso <luigi.scarso@gmail.com>

	tex/mlist.w: mlist_to_hlist(pointer mlist, boolean penalties, int cur_style)
	HH-LS: was cur_mu = x_over_n(get_math_quad(cur_size), 18);
	This is an old bug so the fix can influence outcome       
	The current mu is instead
	cur_mu = x_over_n(get_math_quad(cur_style), 18);
	Thanks to joseph.wright <joseph.wright@morningstar2.co.uk>

2014-12-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* lua/lnodelib.c: Sync with the upstream. Luigi fixes 'print' for
	alink(n) when n is an attribute node.

2014-12-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/texnodes.w: Sync with the upstream. Luigi makes minor changes.

2014-12-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/texnodes.w: Sync with the upstream. Luigi makes minor changes.

2014-12-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/texnodes.w: Sync with the upstream.
	Luigi fixes a bug on cached attributes.
